Bug 807613 - Add a pref to make the placeholder disappear when a text field is focused. r=bz